1. 回傳參數 2. 錯誤訊息 3. log

--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Enum\SexType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlServerTypes\Loader.cs" />
+    <Compile Include="ReqResult\介接回傳參數.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Shared\Shared.csproj">
