--- a/Shared/Shared.csproj
+++ b/Shared/Shared.csproj
@@ -72,6 +72,7 @@
   <ItemGroup>
     <Compile Include="Attribute\StringValueAttribute.cs" />
     <Compile Include="Attribute\TaiwanIdentityCardNumber.cs" />
+    <Compile Include="DTO\PaginatedList.cs" />
     <Compile Include="Enum\CommonCode.cs" />
     <Compile Include="Enum\EnvType.cs" />
     <Compile Include="ExtFunction\Enum.cs" />
