--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -60,6 +60,10 @@
     <Compile Include="Migrations\202012281620376_FirstMigration.designer.cs">
       <DependentUpon>202012281620376_FirstMigration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202012291558408_AlterColumnUpdater.cs" />
+    <Compile Include="Migrations\202012291558408_AlterColumnUpdater.designer.cs">
+      <DependentUpon>202012291558408_AlterColumnUpdater.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlServerTypes\Loader.cs" />
@@ -92,6 +96,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202012281620376_FirstMigration.resx">
       <DependentUpon>202012281620376_FirstMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202012291558408_AlterColumnUpdater.resx">
+      <DependentUpon>202012291558408_AlterColumnUpdater.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
