--- a/SimpleCRUD/Web.config
+++ b/SimpleCRUD/Web.config
@@ -10,6 +10,7 @@
     </configSections>
   <connectionStrings>
     <add name="TPH_MTC" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=DemoDb;Persist Security Info=True;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="TPH_MTC_F" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=MyDb;Persist Security Info=True;Integrated Security=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -26,14 +27,30 @@
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
+    <customErrors redirectMode="ResponseRewrite" mode="RemoteOnly" defaultRedirect="~/Error/NotFound"></customErrors>
   </system.web>
   <system.webServer>
     <handlers>
-      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+      <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
+      <remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" />
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="WebDAV" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" resourceType="Unspecified" requireAccess="Script" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+    <httpErrors errorMode="Custom">
+      <clear />
+      <error path="/Home/ErrorPage/502" responseMode="ExecuteURL" statusCode="502" />
+      <error path="/Home/ErrorPage/501" responseMode="ExecuteURL" statusCode="501" />
+      <error path="/Home/ErrorPage/500" responseMode="ExecuteURL" statusCode="500" />
+      <error path="/Home/ErrorPage/412" responseMode="ExecuteURL" statusCode="412" />
+      <error path="/Home/ErrorPage/406" responseMode="ExecuteURL" statusCode="406" />
+      <error path="/Home/ErrorPage/405" responseMode="ExecuteURL" statusCode="405" />
+      <error path="/Home/ErrorPage/404" responseMode="ExecuteURL" statusCode="404" />
+      <error path="/Home/ErrorPage/403" responseMode="ExecuteURL" statusCode="403" />
+      <error path="/Home/ErrorPage/401" responseMode="ExecuteURL" statusCode="401" />
+    </httpErrors>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -71,7 +88,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-6.1.0.0" newVersion="6.1.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.0.0" newVersion="5.2.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
